fix(scss): fix menu last element align

--- a/Document-uis/src/public/uiAssets/anakeen/IHM/views/document/menu/menu.scss
+++ b/Document-uis/src/public/uiAssets/anakeen/IHM/views/document/menu/menu.scss
@@ -103,7 +103,7 @@ $menu-before-width : 12px;
 
 }
 .k-menu .k-item.menu--right {
-  float: right;
+  align-self: flex-end;
   border-left-width: 1px;
   border-right-width: 0;
 }
